--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "Vendor/Nimble"]
 	path = Vendor/Nimble
 	url = git@github.com:Quick/Nimble.git
+[submodule "Vendor/Alamofire"]
+	path = Vendor/Alamofire
+	url = https://github.com/Alamofire/Alamofire.git
+[submodule "Vendor/SwiftyJSON"]
+	path = Vendor/SwiftyJSON
+	url = https://github.com/SwiftyJSON/SwiftyJSON.git
